triad_ams: fix hassfest issues — set documentation to repo URL, add CONFIG_SCHEMA for config-entry-only, remove placeholder SSDP handler; bump version to 2025.9.11

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "@bharat"
   ],
   "config_flow": true,
-  "documentation": "https://www.home-assistant.io/integrations/triad_ams",
+  "documentation": "https://github.com/bharat/homeassistant-triad-ams",
   "iot_class": "local_polling",
   "quality_scale": "bronze",
   "requirements": [],
