--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -10,3 +10,19 @@ logger:
   default: info
   logs:
     custom_components.triad_ams: debug
+
+sonos:
+  media_player:
+    hosts:
+      - 192.168.0.30
+      - 192.168.0.31
+      - 192.168.0.32
+      - 192.168.0.33
+      - 192.168.0.34
+      - 192.168.0.35
+      - 192.168.0.36
+      - 192.168.0.37
+      - 192.168.0.38
+      - 192.168.0.39
+      - 192.168.0.40
+      - 192.168.0.41
