--- a/custom_components/triad_ams/manifest.json
+++ b/custom_components/triad_ams/manifest.json
@@ -6,6 +6,7 @@
   ],
   "config_flow": true,
   "documentation": "https://github.com/bharat/homeassistant-triad-ams",
+  "issue_tracker": "https://github.com/bharat/homeassistant-triad-ams/issues",
   "iot_class": "local_polling",
   "quality_scale": "bronze",
   "requirements": [],
