triad_ams: improve entity/device naming and multi-hub support
- Add Name field in config flow; set entry unique_id via host:port
- Allow multiple instances (remove single-instance guard)
- Group outputs under single device per entry
- Use has_entity_name with 'Output N' entity names
- Keep stable unique_ids per output
- Options flow: allow renaming (updates entry title)

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -20,7 +20,8 @@
                 "ms-python.vscode-pylance",
                 "ryanluker.vscode-coverage-gutters",
                 "SanjulaGanepola.github-local-actions",
-                "openai.chatgpt"
+                "openai.chatgpt",
+                "github.vscode-github-actions"
             ],
             "settings": {
                 "files.eol": "\n",
