Triad AMS: new minimal coordinator, robust connection handling, and accurate volume mapping
- Replace coordinator with single-queue, paced worker; drop retries; propagate errors
- Connection: single-frame responses, skip one AudioSense unsolicited frame; 5s timeouts
- Add measured volume LUT and map dB↔step to prevent drift; keep hex path
- Media player/entities: simpler setup; initial one-shot refresh; register for rolling poll
- Add minimal 30s rolling poll to maintain eventual consistency and keep connection alive
- Remove debug/test services and unused helpers; tidy imports and lints
- Add scripts for raw command send and volume sweep; brand assets shebang

This consolidates prior noisy commits into one clean change preparing for release.

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -40,6 +40,9 @@
         }
     },
     "remoteUser": "vscode",
+    "remoteEnv": {
+        "GIT_EDITOR": "cursor --wait"
+    },
     "features": {
         "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
             "moby": false
