Add comprehensive test suite for Triad AMS integration
This commit introduces a complete test suite covering all components of
the Triad AMS Home Assistant integration, including both unit tests and
integration tests with a full TCP protocol simulator.

Test Infrastructure:
- pytest.ini: Pytest configuration for test discovery and execution
- requirements-test.txt: Test dependencies (pytest, pytest-homeassistant-custom-component, etc.)
- tests/conftest.py: Shared pytest fixtures for mocking Home Assistant components,
  TriadConnection, TriadCoordinator, and socket enabling for integration tests
- .ruff.toml: Added per-file-ignores section to disable lint rules that are not
  applicable to test files (S101 for asserts, PLR2004 for magic values, SLF001
  for private member access)

Unit Tests (tests/unit/):
- test_volume_lut.py: Tests for volume lookup table utilities (db_for_step,
  step_for_db, percentage conversions)
- test_models.py: Tests for TriadAmsOutput model including source management,
  volume operations, mute control, power state, refresh operations, and listener
  management
- test_connection.py: Tests for TriadConnection with mocked network I/O,
  covering connection lifecycle, command sending, volume/mute operations,
  source management, and error handling
- test_coordinator.py: Tests for TriadCoordinator with mocked connection,
  covering initialization, lifecycle, command execution, polling, zone
  management, and error recovery
- test_media_player.py: Tests for TriadAmsMediaPlayer entity including state
  properties, media attributes from linked entities, service methods, lifecycle
  management, and input link subscriptions
- test_config_flow.py: Tests for TriadAmsConfigFlow and TriadAmsOptionsFlowHandler,
  covering user step, channels step, device count calculation, and options flow
- test_init.py: Tests for integration setup functions (async_setup_entry,
  async_unload_entry, async_migrate_entry)

Integration Tests (tests/integration/):
- simulat

--- a/.ruff.toml
+++ b/.ruff.toml
@@ -23,3 +23,11 @@ keep-runtime-typing = true
 
 [lint.mccabe]
 max-complexity = 25
+
+[lint.per-file-ignores]
+# Disable rules that are not applicable to test files
+"tests/**/*.py" = [
+    "S101",   # Use of `assert` detected (assert is normal in tests)
+    "PLR2004", # Magic value used in comparison (magic values are normal in tests)
+    "SLF001", # Private member accessed (accessing private members is normal in tests)
+]
