--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,14 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Pin to a specific version of ruff's pre-commit hooks
-    rev: v0.6.9
+    rev: v0.14.10
     hooks:
+      - id: ruff-check
+        args: [ --fix ]
       - id: ruff-format
-      - id: ruff
-        args: ["--fix", "--show-fixes"]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+    rev: v6.0.0
     hooks:
       - id: end-of-file-fixer
       - id: trailing-whitespace
