Streamline our validation step
Use one requirements file and have validation only
run a single pip command, in the hopes of reducing the 1.5m
validation step on github to something faster.

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -50,9 +50,7 @@ jobs:
 
       - name: Install requirements
         run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install -r requirements.txt
-          python3 -m pip install -r requirements-test.txt
+          python3 -m pip install --upgrade pip -r requirements.txt
 
       - name: Run full test suite
         run: |
