--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,11 @@ colorlog==6.10.1
 homeassistant==2025.10.0
 home-assistant-frontend==20251001.4
 pip>=21.3.1
-ruff==0.14.10
 pre_commit==4.5.1
 pycares==4.11.0
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+pytest-homeassistant-custom-component>=0.12.0
+pytest-timeout>=2.1.0
+ruff==0.14.10
