--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,7 @@ python_classes = Test*
 python_functions = test_*
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
+addopts = -n auto
 markers =
     unit: Unit tests (fast, isolated)
     integration: Integration tests (slower, end-to-end)
