refactor: eliminate all #noqa comments with code improvements
Refactor test code to remove all #noqa suppressions by actually fixing
underlying issues and reducing code complexity:

1. Configure ruff for test patterns:
   - Add ARG002 to per-file-ignores (pytest fixtures are dependency-injected)
   - Fix pytest_socket import by moving to top level with try/except

2. Refactor simulator.py to reduce complexity:
   - Extract command reading logic into separate methods:
     * _read_command_header()
     * _read_command_data()
     * _read_unknown_command()
     * _send_response()
     * _handle_command_loop()
   - Replace 150+ line if/elif chain in _process_command with dispatcher pattern
   - Extract 15 command handler methods (one per command type)
   - Extract common helpers: _parse_output_channel(), _validate_output(),
     _update_zone_state()
   - Fix TRY300 lint errors by restructuring try/except blocks

3. Remove all #noqa comments:
   - 13 ARG002 comments removed from test files
   - 1 PLC0415 comment removed from conftest.py
   - 3 complexity suppressions removed from simulator.py

Results:
- All 189 tests pass
- No #noqa comments remain in test code
- Simulator complexity reduced (C901/PLR0912/PLR0915 → simple dispatcher)
- Code is more maintainable and easier to extend

--- a/.ruff.toml
+++ b/.ruff.toml
@@ -30,4 +30,5 @@ max-complexity = 25
     "S101",   # Use of `assert` detected (assert is normal in tests)
     "PLR2004", # Magic value used in comparison (magic values are normal in tests)
     "SLF001", # Private member accessed (accessing private members is normal in tests)
+    "ARG002", # Unused method argument (pytest fixtures are dependency-injected)
 ]
