--- a/custom_components/triad_ams/quality_scale.yaml
+++ b/custom_components/triad_ams/quality_scale.yaml
@@ -24,10 +24,10 @@ rules:
   config-entry-unloading: done
   docs-configuration-parameters: done
   docs-installation-parameters: done
-  entity-unavailable: todo
+  entity-unavailable: done
   integration-owner: done
-  log-when-unavailable: todo
-  parallel-updates: todo
+  log-when-unavailable: done
+  parallel-updates: done
   reauthentication-flow: not-applicable
   test-coverage: done
 
