Update quality_scale.yaml to reflect completed Gold requirements
- Mark diagnostics as done (diagnostics.py implemented)
- Mark entity-category as done (EntityCategory.CONFIG set)
- Mark entity-disabled-by-default as done (RegistryEntryDisabler.USER set)
- Mark exception-translations as done (translation keys implemented)
- Mark icon-translations as done (icons.json created)
- Mark repair-issues as done (repair.py implemented)
- Mark brands as done (user confirmed)

--- a/custom_components/triad_ams/quality_scale.yaml
+++ b/custom_components/triad_ams/quality_scale.yaml
@@ -33,7 +33,7 @@ rules:
 
   # Gold
   devices: done
-  diagnostics: todo
+  diagnostics: done
   discovery-update-info: not-applicable
   discovery: not-applicable
   docs-data-update: todo
@@ -44,14 +44,14 @@ rules:
   docs-troubleshooting: done
   docs-use-cases: todo
   dynamic-devices: not-applicable
-  entity-category: todo
+  entity-category: done
   entity-device-class: done
-  entity-disabled-by-default: todo
+  entity-disabled-by-default: done
   entity-translations: done
-  exception-translations: todo
-  icon-translations: todo
+  exception-translations: done
+  icon-translations: done
   reconfiguration-flow: done
-  repair-issues: todo
+  repair-issues: done
   stale-devices: done
 
   # Platinum
