--- a/custom_components/triad_ams/quality_scale.yaml
+++ b/custom_components/triad_ams/quality_scale.yaml
@@ -2,7 +2,7 @@ rules:
   # Bronze
   action-setup: done
   appropriate-polling: done
-  brands: todo
+  brands: done
   common-modules: done
   config-flow-test-coverage: done
   config-flow: done
