fix: register get_joinable_group_members service and update test
- Add SERVICE_GET_JOINABLE_GROUP_MEMBERS constant
- Register service in async_setup with empty schema
- Update test to verify both services are registered
- Service now callable from Home Assistant service UI

--- a/custom_components/triad_ams/services.yaml
+++ b/custom_components/triad_ams/services.yaml
@@ -22,3 +22,13 @@ get_joinable_group_members:
       domain: media_player
       integration: triad_ams
       device_class: receiver
+  response:
+    mandatory: true
+    schema:
+      type: object
+      properties:
+        joinable_members:
+          type: array
+          items:
+            type: string
+          description: "List of entity IDs that can join the current input for grouping."
