--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,15 @@ __pycache__
 */build/*
 */dist/*
 
-
 # misc
 .coverage
 .vscode
 coverage.xml
 .ruff_cache
 
-
 # Home Assistant configuration
 config/*
 !config/configuration.yaml
+
+# AI related
+.claude
