--- a/requirements-fr2342.txt
+++ b/requirements-fr2342.txt
@@ -1,6 +1,16 @@
+# This is the requirements file for the feature/get-groupable-players-2342 branch
+# It is used to install the dependencies for the feature/get-groupable-players-2342 branch
+# We can delete this file after the feature/get-groupable-players-2342 branch is merged into main
+#
+# I'm running in a devcontainer so I do this:
+#   $ sudo mkdir /workspaces/homeassistant-core
+#   $ sudo chown $USER:$USER /workspaces/homeassistant-core
+#   $ git clone --depth 1 --branch feature/get-groupable-players-2342 \
+#     https://github.com/dan-s-github/homeassistant-core.git /workspaces/homeassistant-core
+
 colorlog==6.10.1
-homeassistant @ git+https://github.com/dan-s-github/homeassistant-core@feature/get-groupable-players-2342
-home-assistant-frontend @ file:///workspaces/homeassistant-triad-ams/homeassistant-frontend
+homeassistant @ file:///workspaces/homeassistant-core
+home-assistant-frontend==20251001.4
 litellm>=1.80.16
 pip>=21.3.1
 pre_commit==4.5.1
