Simplify protocol debug logging and stabilize availability handling
- collapse protocol logging behind a single on/off flag using the
  integration logger with compact TX/RX summaries
- remove per-entry targeting from the protocol debug service and
  document the simplified flow
- avoid reconnects on coordinator cancellation; treat shutdown cleanly
- fix repairs availability callbacks to avoid scheduling non-coroutines
- update and add unit coverage for repairs and cancellation behavior

--- a/custom_components/triad_ams/services.yaml
+++ b/custom_components/triad_ams/services.yaml
@@ -15,3 +15,11 @@ turn_on_with_source:
             supported_features:
               - media_player.MediaPlayerEntityFeature.PLAY
               - media_player.MediaPlayerEntityFeature.PLAY_MEDIA
+set_protocol_debug:
+  description: "Enable or disable protocol-level logging for all Triad AMS entries."
+  fields:
+    enabled:
+      required: true
+      example: true
+      selector:
+        boolean:
