fix: use github_actions in auto-merge condition to match fetch-metadata output
Dependabot branch names use underscore (github_actions); the workflow
was checking for hyphen (github-actions), so the enable auto-merge
step was always skipped.

Made-with: Cursor

--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -24,7 +24,7 @@ jobs:
           echo "${{ toJSON(steps.meta) }}"
 
       - name: Enable auto-merge for GitHub Actions updates
-        if: steps.meta.outputs.package-ecosystem == 'github-actions'
+        if: steps.meta.outputs.package-ecosystem == 'github_actions'
         run: |
           gh pr merge --auto --squash "$PR_URL"
         env:
