--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -1,34 +1,30 @@
-name: Auto-merge Dependabot (GitHub Actions)
+name: Dependabot auto-merge
 
-on:
-  pull_request_target:
-    types: [opened, synchronize, reopened, ready_for_review]
+on: pull_request
 
 permissions:
   contents: write
   pull-requests: write
 
 jobs:
-  automerge:
-    # Run when the PR is from Dependabot (not just when Dependabot triggers the event).
-    # This allows the job to run on reopen/synchronize triggered by humans.
-    if: github.event.pull_request.user.login == 'dependabot[bot]'
+  dependabot:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.user.login == 'dependabot[bot]'
     steps:
       - name: Fetch Dependabot metadata
-        id: meta
+        id: metadata
         uses: dependabot/fetch-metadata@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: Print metadata outputs
-        run: |
-          echo "${{ toJSON(steps.meta) }}"
-
-      - name: Enable auto-merge for GitHub Actions updates
-        if: steps.meta.outputs.package-ecosystem == 'github_actions'
-        run: |
-          gh pr merge --auto --squash "$PR_URL"
+      - name: Approve the PR
+        run: gh pr review --approve "$PR_URL"
         env:
           PR_URL: ${{ github.event.pull_request.html_url }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Enable auto-merge
+        run: gh pr merge --auto --squash "$PR_URL"
+        env:
+          PR_URL: ${{ github.event.pull_request.html_url }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
